# Linear-Response-of-LIF-neurons

./: CMakeLists.txt  Dockerfile  LIF0.cpp  README.md  ioLIF.py  main.cpp  main.py  requirements.txt  testResponse.py
lifAPI/: CMakeLists.txt  LIF0.hpp  SynapticCurrent.py  ioLIF.py  main.py
